template/style.css
.login-page {
  width: 360px;
  padding: 8% 0 0;
  margin: auto;
}
.form {
  position: relative;
  z-index: 1;
  background: #FFFFFF;
  max-width: 360px;
  margin: 0 auto 100px;
  padding: 45px;
  text-align: center;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}
.form input {
  font-family: sans-serif;
  outline: 0;
  background: #f2f2f2;
  width: 100%;
  border: 0;
  margin: 0 0 15px;
  padding: 15px;
  box-sizing: border-box;
  font-size: 14px;
}
.form button {
  font-family: sans-serif;
  text-transform: uppercase;
  outline: 0;
  background: #4CAF50;
  width: 100%;
  border: 0;
  padding: 15px;
  color: #FFFFFF;
  font-size: 14px;
  -webkit-transition: all 0.3 ease;
  transition: all 0.3 ease;
  cursor: pointer;
}
.form button:hover,.form button:active,.form button:focus {
  background: #43A047;
}
.container {
  position: relative;
  z-index: 1;
  max-width: 300px;
  margin: 0 auto;
}
.container:before, .container:after {
  content: "";
  display: block;
  clear: both;
}
.container .info {
  margin: 50px auto;
  text-align: center;
}
.container .info h1 {
  margin: 0 0 15px;
  padding: 0;
  font-size: 36px;
  font-weight: 300;
  color: #1a1a1a;
}
.container .info span {
  color: #4d4d4d;
  font-size: 12px;
}
.container .info span a {
  color: #000000;
  text-decoration: none;
}
.container .info span .fa {
  color: #EF3B3A;
}

body {
   font-family: sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#logo {
  margin: auto;
  display:block
}

.message {
  /*text-align: justify;*/
  display: none;
}

#fade {
  position: fixed;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  background: #000000BF;
  z-index: 1999;
  display: none;
}

.lds-ellipsis {
  /*display: inline-block;*/
  position: relative;
  width: 64px;
  height: 64px;
  margin: auto;
  display: block;
  top: 35%;
}
.lds-ellipsis div {
  position: absolute;
  top: 27px;
  width: 11px;
  height: 11px;
  border-radius: 50%;
  background: #fff;
  animation-timing-function: cubic-bezier(0, 1, 1, 0);
}
.lds-ellipsis div:nth-child(1) {
  left: 6px;
  animation: lds-ellipsis1 0.6s infinite;
}
.lds-ellipsis div:nth-child(2) {
  left: 6px;
  animation: lds-ellipsis2 0.6s infinite;
}
.lds-ellipsis div:nth-child(3) {
  left: 26px;
  animation: lds-ellipsis2 0.6s infinite;
}
.lds-ellipsis div:nth-child(4) {
  left: 45px;
  animation: lds-ellipsis3 0.6s infinite;
}
@keyframes lds-ellipsis1 {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes lds-ellipsis3 {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}
@keyframes lds-ellipsis2 {
  0% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(19px, 0);
  }
}


.svg-icon-success,
.svg-icon-error {
  width: 50px;
  height: 50px;
  display: inline-block;
  position: absolute;
  top: 93%;
  left: 47%;
  margin: -25px 0 0 -25px;
  opacity: 0;
  transform: translate3d(0, -3000px, 0);
}

.svg-icon-error {
  left: initial;
}

.svg-icon-success .circle-check {
  fill: none;
  fill-opacity: 0;
  stroke: #fff;
  stroke-width: 4px;
  stroke-location: inside;
  stroke-dasharray: 0 100;
}

.svg-icon-success.is-animated,
.svg-icon-error.is-animated {
  animation-name: bounceInDown;
  animation-duration: 0.5s;
  animation-fill-mode: both;
}

.svg-icon-success.is-animated .circle-check {
  animation-name: dasharray;
  animation-duration: 0.5s;
  animation-delay: 0.3s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: both;
}

.svg-icon-error.is-animated .x-single {
  animation-name: rotate;
  animation-duration: 0.5s;
  animation-delay: 0.3s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: both;
  transform-origin: 50% 50%;
}

/**
 * Animations
 */

/**
 * @source animate.css - bounceInDown
 */
@keyframes bounceInDown {
  from, 60%, 75%, 90%, to {
    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
  }

  0% {
    opacity: 0;
    transform: translate3d(0, -3000px, 0);
  }

  60% {
    opacity: 1;
    transform: translate3d(0, 25px, 0);
  }

  75% {
    transform: translate3d(0, -10px, 0);
  }

  90% {
    transform: translate3d(0, 5px, 0);
  }

  to {
    opacity: 1;
    transform: none;
  }
}

@keyframes dasharray {
  0% {
    stroke-dasharray: 0 100;
  }

  100% {
    stroke-dasharray: 100 0;
  }
}

@keyframes rotate {
  0% {
    transform: rotate(0);
  }

  100% {
    transform: rotate(315deg);
  }
}

.strong {
  display: inline-block;
  width: 49px;
  height: 3px;
}

#str1 {
  background-color: #f44336;
}

#str2 {
  background-color: #FFEB3B;
  display: none;
}

#str3 {
  background-color: #2196F3;
  display: none;
}

#str4 {
  background-color: #4CAF50;
  display: none;
}

#new_pass {
  margin-bottom: 0px;
}

